# robotics_I_scripts

./: .gitignore  .pre-commit-config.yaml  README.md  inv.py  out.txt  pyproject.toml  robots  robots.py  scrapbook.ipynb
doc/formulary/: formulary.tex
doc/rpy_inv_proof/: rpy_proof.tex
src/pyrobots/: __init__.py  den_hart.py  eigen.py  rotations.py
tests/: test_rotations.py
